--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -272,6 +272,30 @@
             margin: 0 5px;
             justify-content: center;
             align-items: center;
+            &:nth-child(1) {
+              svg {
+                transition: 0.2s ease;
+                &:hover {
+                  color: rgb(221, 16, 16);
+                }
+              }
+            }
+            &:nth-child(2) {
+              svg {
+                transition: 0.2s ease;
+                &:hover {
+                  color: blue;
+                }
+              }
+            }
+            &:nth-child(3) {
+              svg {
+                transition: 0.2s ease;
+                &:hover {
+                  color: green;
+                }
+              }
+            }
           }
         }
       }
