--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -49,6 +49,21 @@
 * body .header nav a {
   margin: 0 20px;
   color: #000000;
+  position: relative;
+  padding-bottom: 10px;
+}
+* body .header nav a::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background-color: #24292f;
+  top: 20px;
+  left: 0;
+  transition: 0.4s linear;
+}
+* body .header nav a:hover::before {
+  width: 100%;
 }
 @media screen and (max-width: 1025px) {
   * body .header nav.active {
@@ -285,6 +300,10 @@
   color: #fff;
   font-size: 25px;
   cursor: pointer;
+  transition: 0.3s ease;
+}
+* body .intro .intro_title a button:hover {
+  padding: 10px 70px;
 }
 @media screen and (max-width: 426px) {
   * body .intro .intro_title a button {
@@ -312,24 +331,31 @@
   margin: 0 5px;
   justify-content: center;
   align-items: center;
+  transition: 0.3s ease;
+}
+* body .intro .intro_title .intro_icons a:hover {
+  transform: scale(1.3);
 }
 * body .intro .intro_title .intro_icons a:nth-child(1) svg {
   transition: 0.2s ease;
 }
 * body .intro .intro_title .intro_icons a:nth-child(1) svg:hover {
   color: rgb(221, 16, 16);
+  transform: scale(1.3);
 }
 * body .intro .intro_title .intro_icons a:nth-child(2) svg {
   transition: 0.2s ease;
 }
 * body .intro .intro_title .intro_icons a:nth-child(2) svg:hover {
   color: blue;
+  transform: scale(1.3);
 }
 * body .intro .intro_title .intro_icons a:nth-child(3) svg {
   transition: 0.2s ease;
 }
 * body .intro .intro_title .intro_icons a:nth-child(3) svg:hover {
   color: green;
+  transform: scale(1.3);
 }
 * body .intro .intro_logo {
   width: 50%;
@@ -586,6 +612,10 @@
 * body .footer .footer_icons a {
   color: #fff;
   fill: #fff;
+  transition: 0.3s ease;
+}
+* body .footer .footer_icons a:hover {
+  transform: scale(1.3);
 }
 * body .footer .footer_icons a svg {
   width: 22px;
