--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -10,7 +10,6 @@
   text-decoration: none;
   font-family: "Mons", serif;
   scroll-behavior: smooth;
-
   body {
     #root {
       max-width: 100vw;
@@ -45,6 +44,23 @@
         a {
           margin: 0 20px;
           color: #000000;
+          position: relative;
+          padding-bottom: 10px;
+          &::before {
+            content: "";
+            position: absolute;
+            width: 0;
+            height: 2px;
+            background-color: #24292f;
+            top: 20px;
+            left: 0;
+            transition: 0.4s linear;
+          }
+          &:hover {
+            &::before {
+              width: 100%;
+            }
+          }
         }
       }
       @media screen and (max-width: 1025px) {
@@ -249,6 +265,10 @@
             color: #fff;
             font-size: 25px;
             cursor: pointer;
+            transition: 0.3s ease;
+            &:hover {
+              padding: 10px 70px;
+            }
             @media screen and (max-width: 426px) {
               font-size: 20px;
               width: 100%;
@@ -272,11 +292,16 @@
             margin: 0 5px;
             justify-content: center;
             align-items: center;
+            transition: 0.3s ease;
+            &:hover {
+              transform: scale(1.3);
+            }
             &:nth-child(1) {
               svg {
                 transition: 0.2s ease;
                 &:hover {
                   color: rgb(221, 16, 16);
+                  transform: scale(1.3);
                 }
               }
             }
@@ -285,6 +310,7 @@
                 transition: 0.2s ease;
                 &:hover {
                   color: blue;
+                  transform: scale(1.3);
                 }
               }
             }
@@ -293,6 +319,7 @@
                 transition: 0.2s ease;
                 &:hover {
                   color: green;
+                  transform: scale(1.3);
                 }
               }
             }
@@ -516,6 +543,10 @@
         a {
           color: #fff;
           fill: #fff;
+          transition: 0.3s ease;
+          &:hover {
+            transform: scale(1.3);
+          }
           svg {
             width: 22px;
             height: 22px;
