update 14 files and delete 2 files

--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -62,6 +62,12 @@
   left: 0;
   transition: 0.4s linear;
 }
+@media screen and (max-width: 1025px) {
+  * body .header nav a::before {
+    top: 30px;
+    background-color: #fff;
+  }
+}
 * body .header nav a:hover::before {
   width: 100%;
 }
@@ -78,19 +84,7 @@
     align-items: center;
     justify-content: center;
     z-index: 2;
-    -webkit-animation: fade_left 0.7s linear forwards;
-            animation: fade_left 0.7s linear forwards;
-  }
-  @-webkit-keyframes fade_left {
-    0% {
-      top: -150vh;
-    }
-    50% {
-      top: -50vh;
-    }
-    100% {
-      top: 0;
-    }
+    animation: fade_left 0.7s linear forwards;
   }
   @keyframes fade_left {
     0% {
@@ -138,7 +132,6 @@
   position: relative;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
 }
 @media screen and (max-width: 1025px) {
@@ -292,7 +285,16 @@
     font-size: 20px;
   }
 }
-* body .intro .intro_title a button {
+* body .intro .intro_title .btn_flex {
+  display: flex;
+  gap: 10px;
+}
+@media screen and (max-width: 600px) {
+  * body .intro .intro_title .btn_flex {
+    flex-direction: column;
+  }
+}
+* body .intro .intro_title .btn_flex a button {
   padding: 10px 30px;
   background: #0049ff;
   border-radius: 30px;
@@ -302,20 +304,32 @@
   cursor: pointer;
   transition: 0.3s ease;
 }
-* body .intro .intro_title a button:hover {
-  padding: 10px 70px;
+@media screen and (max-width: 600px) {
+  * body .intro .intro_title .btn_flex a button {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 426px) {
-  * body .intro .intro_title a button {
+  * body .intro .intro_title .btn_flex a button {
     font-size: 20px;
     width: 100%;
   }
 }
 @media screen and (max-width: 376px) {
-  * body .intro .intro_title a button {
+  * body .intro .intro_title .btn_flex a button {
     font-size: 20px;
     width: 100%;
   }
+}
+* body .intro .intro_title .btn_flex button {
+  padding: 10px 30px;
+  background: #0049ff;
+  border-radius: 30px;
+  border: 1px solid #0049ff;
+  color: #fff;
+  font-size: 25px;
+  cursor: pointer;
+  transition: 0.3s ease;
 }
 * body .intro .intro_title .intro_icons {
   margin-top: 40px;
@@ -464,8 +478,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  -webkit-animation: circle-chart-appear 2s forwards;
-          animation: circle-chart-appear 2s forwards;
+  animation: circle-chart-appear 2s forwards;
   transform: translateY(0.3em);
 }
 * body .skills .skills_card .skills_percent section {
@@ -478,20 +491,9 @@
 * body .skills .skills_card .skills_percent section svg {
   z-index: 10;
 }
-@-webkit-keyframes circle-chart-fill {
-  to {
-    stroke-dasharray: 0 100;
-  }
-}
 @keyframes circle-chart-fill {
   to {
     stroke-dasharray: 0 100;
-  }
-}
-@-webkit-keyframes circle-chart-appear {
-  to {
-    opacity: 1;
-    transform: translateY(0);
   }
 }
 @keyframes circle-chart-appear {
@@ -509,8 +511,7 @@
   transform: rotate(-90deg) scale(1, -1);
 }
 * body .skills .skills_card .skills_percent section .circle-chart__info {
-  -webkit-animation: circle-chart-appear 2s forwards;
-          animation: circle-chart-appear 2s forwards;
+  animation: circle-chart-appear 2s forwards;
   opacity: 0;
   transform: translateY(0.3em);
 }
@@ -628,8 +629,7 @@
   height: 80px;
 }
 * body .loader .lds-roller div {
-  -webkit-animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-          animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   transform-origin: 40px 40px;
 }
 * body .loader .lds-roller div:after {
@@ -643,76 +643,60 @@
   margin: -4px 0 0 -4px;
 }
 * body .loader .lds-roller div:nth-child(1) {
-  -webkit-animation-delay: -0.036s;
-          animation-delay: -0.036s;
+  animation-delay: -0.036s;
 }
 * body .loader .lds-roller div:nth-child(1):after {
   top: 63px;
   left: 63px;
 }
 * body .loader .lds-roller div:nth-child(2) {
-  -webkit-animation-delay: -0.072s;
-          animation-delay: -0.072s;
+  animation-delay: -0.072s;
 }
 * body .loader .lds-roller div:nth-child(2):after {
   top: 68px;
   left: 56px;
 }
 * body .loader .lds-roller div:nth-child(3) {
-  -webkit-animation-delay: -0.108s;
-          animation-delay: -0.108s;
+  animation-delay: -0.108s;
 }
 * body .loader .lds-roller div:nth-child(3):after {
   top: 71px;
   left: 48px;
 }
 * body .loader .lds-roller div:nth-child(4) {
-  -webkit-animation-delay: -0.144s;
-          animation-delay: -0.144s;
+  animation-delay: -0.144s;
 }
 * body .loader .lds-roller div:nth-child(4):after {
   top: 72px;
   left: 40px;
 }
 * body .loader .lds-roller div:nth-child(5) {
-  -webkit-animation-delay: -0.18s;
-          animation-delay: -0.18s;
+  animation-delay: -0.18s;
 }
 * body .loader .lds-roller div:nth-child(5):after {
   top: 71px;
   left: 32px;
 }
 * body .loader .lds-roller div:nth-child(6) {
-  -webkit-animation-delay: -0.216s;
-          animation-delay: -0.216s;
+  animation-delay: -0.216s;
 }
 * body .loader .lds-roller div:nth-child(6):after {
   top: 68px;
   left: 24px;
 }
 * body .loader .lds-roller div:nth-child(7) {
-  -webkit-animation-delay: -0.252s;
-          animation-delay: -0.252s;
+  animation-delay: -0.252s;
 }
 * body .loader .lds-roller div:nth-child(7):after {
   top: 63px;
   left: 17px;
 }
 * body .loader .lds-roller div:nth-child(8) {
-  -webkit-animation-delay: -0.288s;
-          animation-delay: -0.288s;
+  animation-delay: -0.288s;
 }
 * body .loader .lds-roller div:nth-child(8):after {
   top: 56px;
   left: 12px;
-}
-@-webkit-keyframes lds-roller {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
 @keyframes lds-roller {
   0% {
@@ -720,5 +704,125 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+* body .modal {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  background: rgba(51, 51, 51, 0.6431372549);
+  top: 0;
+  left: 0;
+  z-index: 9;
+}
+* body .modal .modal_container {
+  width: 100%;
+  max-width: 40%;
+  display: grid;
+  grid-template-columns: 1fr;
+  background: #fff;
+  padding: 30px 45px;
+  border-radius: 20px;
+  border: 2px solid #e7e7e7;
+  position: relative;
+  animation: modal 0.6s ease alternate;
+}
+@media screen and (max-width: 1025px) {
+  * body .modal .modal_container {
+    max-width: 60%;
+  }
+}
+@media screen and (max-width: 769px) {
+  * body .modal .modal_container {
+    max-width: 70%;
+    padding: 10px 20px;
+  }
+}
+@media screen and (max-width: 426px) {
+  * body .modal .modal_container {
+    max-width: 80%;
+    padding: 10px 20px;
+  }
+}
+* body .modal .modal_container .close_btn {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  padding: 8px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 50%;
+  line-height: 14px;
+  color: #777;
+  transition: 0.3s ease;
+}
+* body .modal .modal_container .close_btn:hover {
+  background-color: rgba(119, 119, 119, 0.2078431373);
+  color: #555;
+}
+@media screen and (max-width: 426px) {
+  * body .modal .modal_container .close_btn {
+    top: 5px;
+    right: 5px;
+  }
+}
+* body .modal .modal_container .modal_title {
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 769px) {
+  * body .modal .modal_container .modal_title h2 {
+    font-size: 16px;
+  }
+}
+* body .modal .modal_container form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 10px;
+}
+* body .modal .modal_container form input,
+* body .modal .modal_container form textarea {
+  width: 100%;
+  padding: 10px 15px;
+  font-size: 18px;
+  border-radius: 8px;
+  outline: none;
+  border: 1px solid silver;
+}
+@media screen and (max-width: 769px) {
+  * body .modal .modal_container form input,
+  * body .modal .modal_container form textarea {
+    font-size: 16px;
+  }
+}
+* body .modal .modal_container form button {
+  padding: 10px 15px;
+  font-size: 18px;
+  border-radius: 8px;
+  outline: none;
+  border: 1px solid transparent;
+  cursor: pointer;
+  background: teal;
+  color: #fff;
+  font-weight: 600;
+  transition: 0.3s ease all;
+}
+* body .modal .modal_container form button:hover {
+  background-color: transparent;
+  border: 1px solid teal;
+  color: teal;
+}
+@media screen and (max-width: 769px) {
+  * body .modal .modal_container form button {
+    font-size: 16px;
+  }
+}
+@keyframes modal {
+  from {
+    transform: scale(0.5) translateY(200px);
+  }
+  to {
+    transform: scale(1) translateY(0);
   }
 }/*# sourceMappingURL=styles.css.map */
