--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -11,6 +11,8 @@
   font-family: "Mons", serif;
   scroll-behavior: smooth;
   body {
+    // filter: saturate(180%);
+
     #root {
       max-width: 100vw;
       min-height: 100vh;
@@ -55,6 +57,10 @@
             top: 20px;
             left: 0;
             transition: 0.4s linear;
+            @media screen and (max-width: 1025px) {
+              top: 30px;
+              background-color: #fff;
+            }
           }
           &:hover {
             &::before {
@@ -256,7 +262,37 @@
             font-size: 20px;
           }
         }
-        a {
+        .btn_flex {
+          display: flex;
+          gap: 10px;
+          @media screen and (max-width: 600px) {
+            flex-direction: column;
+          }
+          a {
+            button {
+              padding: 10px 30px;
+              background: #0049ff;
+              border-radius: 30px;
+              border: 1px solid #0049ff;
+              color: #fff;
+              font-size: 25px;
+              cursor: pointer;
+              transition: 0.3s ease;
+
+              @media screen and (max-width: 600px) {
+                width: 100%;
+              }
+
+              @media screen and (max-width: 426px) {
+                font-size: 20px;
+                width: 100%;
+              }
+              @media screen and (max-width: 376px) {
+                font-size: 20px;
+                width: 100%;
+              }
+            }
+          }
           button {
             padding: 10px 30px;
             background: #0049ff;
@@ -266,19 +302,9 @@
             font-size: 25px;
             cursor: pointer;
             transition: 0.3s ease;
-            &:hover {
-              padding: 10px 70px;
-            }
-            @media screen and (max-width: 426px) {
-              font-size: 20px;
-              width: 100%;
-            }
-            @media screen and (max-width: 376px) {
-              font-size: 20px;
-              width: 100%;
-            }
           }
         }
+
         .intro_icons {
           margin-top: 40px;
           a {
@@ -637,6 +663,114 @@
         }
         100% {
           transform: rotate(360deg);
+        }
+      }
+    }
+    .modal {
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      place-items: center;
+      background: #333333a4;
+      // backdrop-filter: blur(5px) saturate(0%);
+      top: 0;
+      left: 0;
+      z-index: 9;
+      .modal_container {
+        width: 100%;
+        max-width: calc(100% - 60%);
+        display: grid;
+        grid-template-columns: 1fr;
+        background: #fff;
+        padding: 30px 45px;
+        border-radius: 20px;
+        border: 2px solid #e7e7e7;
+        position: relative;
+        animation: modal 0.6s ease alternate;
+        @media screen and (max-width: 1025px) {
+          max-width: calc(100% - 40%);
+        }
+        @media screen and (max-width: 769px) {
+          max-width: calc(100% - 30%);
+          padding: 10px 20px;
+        }
+        @media screen and (max-width: 426px) {
+          max-width: calc(100% - 20%);
+          padding: 10px 20px;
+        }
+        .close_btn {
+          position: absolute;
+          top: 15px;
+          right: 15px;
+          padding: 8px;
+          font-size: 18px;
+          cursor: pointer;
+          border-radius: 50%;
+          line-height: 14px;
+          color: #777;
+          transition: 0.3s ease;
+          &:hover {
+            background-color: #77777735;
+            color: #555;
+          }
+          @media screen and (max-width: 426px) {
+            top: 5px;
+            right: 5px;
+          }
+        }
+        .modal_title {
+          margin-bottom: 20px;
+          h2 {
+            @media screen and (max-width: 769px) {
+              font-size: 16px;
+            }
+          }
+        }
+        form {
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-gap: 10px;
+          input,
+          textarea {
+            width: 100%;
+            padding: 10px 15px;
+            font-size: 18px;
+            border-radius: 8px;
+            outline: none;
+            border: 1px solid silver;
+            @media screen and (max-width: 769px) {
+              font-size: 16px;
+            }
+          }
+          button {
+            padding: 10px 15px;
+            font-size: 18px;
+            border-radius: 8px;
+            outline: none;
+            border: 1px solid transparent;
+            cursor: pointer;
+            background: teal;
+            color: #fff;
+            font-weight: 600;
+            transition: 0.3s ease all;
+            &:hover {
+              background-color: transparent;
+              border: 1px solid teal;
+              color: teal;
+            }
+            @media screen and (max-width: 769px) {
+              font-size: 16px;
+            }
+          }
+        }
+        @keyframes modal {
+          from {
+            transform: scale(0.5) translateY(200px);
+          }
+          to {
+            transform: scale(1) translateY(0);
+          }
         }
       }
     }
