delete 3 files and update 7 files

--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -331,6 +331,11 @@
   cursor: pointer;
   transition: 0.3s ease;
 }
+@media screen and (max-width: 426px) {
+  * body .intro .intro_title .btn_flex button {
+    font-size: 20px;
+  }
+}
 * body .intro .intro_title .intro_icons {
   margin-top: 40px;
 }
