--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -302,6 +302,9 @@
             font-size: 25px;
             cursor: pointer;
             transition: 0.3s ease;
+            @media screen and (max-width: 426px) {
+              font-size: 20px;
+            }
           }
         }
 
